--- a/styles/index.css
+++ b/styles/index.css
@@ -10,3 +10,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+li{
+    border: 1px solid;
+    width: 50%;
+    margin: 15px auto;
+    list-style-type: none;
+}
